# VBDrive

./: .gitmodules  AGENTS.md  CMakeLists.txt  DEV_NOTES.md  README.md  check_motor_position.py  stm32g431vbtx_flash.ld
App/: app.cpp  app.h  command_mode.cpp  common.cpp  communications.cpp  config.cpp  cyphal_register_helpers.hpp  state_manager.cpp  state_manager.hpp
Core/Src/: main.c
cmake/stm32cubemx/: CMakeLists.txt
scripts/hil/: check_motor_position.py  check_offset_application.py  cyphal_hil_common.py
tests/: CMakeLists.txt  cyphal_register_helpers_test.cpp
